[package]
name = "learn-stylus"
version = "0.1.0"
edition = "2024"

[dependencies]
stylus-sdk = { version = "0.10", features = ["reentrant"] }
alloy-sol-types = "1.3.1"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "learn-stylus"
path = "src/main.rs"

[features]
export-abi = ["stylus-sdk/export-abi"]